[metadata]
name = swarm_bedrock
version = 0.1.0
author = João Galego
description = A lightweight, multi-agent orchestration framework built on top of Amazon Bedrock
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    boto3>=1.35.40
    pydantic
python_requires = >=3.10

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3